<resources>
    <string name="app_name">Radio SDR</string>
    <string name="frequency">Frequência</string>
    <string name="gain">Ganho</string>
    <string name="auto_gain">Ganho Automático</string>
    <string name="manual_gain">Ganho Manual</string>
    <string name="start_sdr">Iniciar SDR</string>
    <string name="stop_sdr">Parar SDR</string>
    <string name="connect_device">Conectar Dispositivo</string>
    <string name="device_connected">Dispositivo Conectado</string>
    <string name="device_disconnected">Dispositivo Desconectado</string>
    <string name="rtl2832u_r820t2_detected">RTL2832U R820T2 TCXO+BIAS T+NF detectado</string>
    <string name="no_device_found">Nenhum dispositivo RTL-SDR encontrado</string>
    <string name="usb_permission_denied">Permissão USB negada</string>
    <string name="spectrum">Espectro</string>
    <string name="waterfall">Cascata</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>
    <string name="sample_rate">Taxa de Amostragem</string>
    <string name="frequency_correction">Correção de Frequência</string>
    <string name="demodulation">Demodulação</string>
    <string name="fm">FM</string>
    <string name="am">AM</string>
    <string name="usb">USB</string>
    <string name="lsb">LSB</string>
    <string name="recording">Gravando</string>
    <string name="record">Gravar</string>
    <string name="stop_record">Parar Gravação</string>
    <string name="volume">Volume</string>
    <string name="mute">Mudo</string>
    <string name="unmute">Som</string>
    <string name="error_usb_permission">Erro: Permissão USB necessária</string>
    <string name="error_device_init">Erro: Falha ao inicializar dispositivo</string>
    <string name="error_audio_init">Erro: Falha ao inicializar áudio</string>
    <string name="frequency_mhz">MHz</string>
    <string name="gain_db">dB</string>
    <string name="bandwidth">Largura de Banda</string>
    <string name="squelch">Squelch</string>
    <string name="agc">AGC</string>
</resources>
